--- a/MEducation/src/styles/index.scss
+++ b/MEducation/src/styles/index.scss
@@ -22,3 +22,19 @@
     text-align: left;
   }
 } 
+.teacher{
+  input{
+    width: 230px;
+  }
+  textarea{
+    width: 230px;
+  }
+  .study{
+    width: 230px;
+    text-align: center;
+    margin-left: 35px;
+  }
+  .ivu-select{
+    width: 20px;
+  }
+}
